--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Anders Backman, VRlab 2004 (andersb@cs.umu.se)
 Alberto Jaspe, videaLAB, University of La Coruña (jaspe@udc.es)
 Tomas Hämälä, VRlab, 2002 (tomash@hpc2n.umu.se)
+Loic Dachary (loic@dachary.org) - autotools packaging
